--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,6 +6,7 @@ import { LinkPreset, type NavBarLink } from "../types/config";
 import { url } from "../utils/url-utils";
 import LightDarkSwitch from "./LightDarkSwitch.svelte";
 import NavMenuPanel from "./widget/NavMenuPanel.astro";
+import StreakBadge from "./widget/StreakBadge.svelte";
 
 const className = Astro.props.class;
 
@@ -41,7 +42,9 @@ let links: NavBarLink[] = navBarConfig.links.map(
                 </a>;
             })}
         </div>
-        <div class="flex">
+        <div class="flex items-center gap-2">
+            <!-- @ts-expect-error - client:load is an Astro directive, not a component prop -->
+            <StreakBadge client:load />
             <!-- @ts-expect-error - client:load is an Astro directive, not a component prop -->
             <LightDarkSwitch client:load></LightDarkSwitch>
 
